fixed checkbox not displying on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -370,7 +370,7 @@ radio:hover {
 
 .checked::marker {
   /* content: "✓   "; */
-  content: "✔\fe0e   ";
+  content: "✔&#fe0e   ";
   color: green;
 }
 
